[metadata]
name = numbers-client
version = 0.1.0
url = https://github.com/pohmelie/tp-numbers-client
author = pohmelie
author_email = multisosnooley@gmail.com
description = Python client for json subset of numbers api
long_description = file: readme.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
py_modules = numbers_client
python_requires = >= 3.8
install_requires =
    httpx

[options.extras_require]
dev =
    pytest
    pytest-cov
    flake8
